--- a/JavaAPI/src/main/resources/application.properties
+++ b/JavaAPI/src/main/resources/application.properties
@@ -1,1 +1,16 @@
 spring.application.name=JavaAPI
+
+##default em Spring é 8080
+server.port=8080
+
+##configs do BD
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/negocionaarea
+spring.datasource.username=root
+spring.datasource.password=2805
+spring.datasource.drive-class-name=com.mysql.cj.jdbc.Driver
+
+##config do jpa
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
