--- a/JavaAPI/src/main/resources/application.properties
+++ b/JavaAPI/src/main/resources/application.properties
@@ -7,7 +7,7 @@ server.port=8080
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/negocionaarea
 spring.datasource.username=root
 spring.datasource.password=2805
-spring.datasource.drive-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 ##config do jpa
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
