--- a/JavaAPI/src/main/resources/application.properties
+++ b/JavaAPI/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 spring.application.name=JavaAPI
 
-##default em Spring é 8080
+##default em Spring ï¿½ 8080
 server.port=8080
 
 ##configs do BD
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/negocionaarea
-spring.datasource.username=root
-spring.datasource.password=2805
+spring.datasource.username=admin
+spring.datasource.password=admin
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 ##config do jpa
